--- a/CSS/dashboardHomepage.css
+++ b/CSS/dashboardHomepage.css
@@ -101,7 +101,7 @@
     box-sizing: border-box;
     min-height: 100vh;
     margin-left: 340px;
-    background: linear-gradient(135deg, #0C0C0C 0%, #1A1A1A 100%);
+   /* background: linear-gradient(135deg, #0C0C0C 0%, #1A1A1A 100%);*/
     padding: 95px 30px 10px 30px;
 
     /* fyll hela höjden även om gridens innehåll är kort */
