Side navigation 768px

--- a/CSS/dashboardHeader.css
+++ b/CSS/dashboardHeader.css
@@ -8,7 +8,8 @@ header {
     border-bottom: 1px solid #F6DBC0;
 }
 
-.dashboardNav {
+.dashboardNav,
+.smallDashboardNav {
     width: 100%;
     margin: 0 auto;
     display: flex;
@@ -27,7 +28,8 @@ header {
     list-style: none;
 }
 
-.dashboardNav a {
+.dashboardNav a,
+.smallDashboardNav a {
     text-decoration: none;
     color: white;
 }
@@ -61,7 +63,7 @@ header {
     transform: scale(1.1);
 }
 
-#dashboardNavbutton {
+#openDashboardNav {
     width: 40px;
     height: 40px;
     background-color: transparent;
@@ -73,7 +75,6 @@ header {
 }
 
 #closeNavbutton {
-    display: none;
     width: 40px;
     height: 40px;
     background-color: #191919;
@@ -86,4 +87,70 @@ header {
     position: fixed;
     border-radius: 50%;
     border: solid 1px white;
+}
+
+#closeDashboardNav {
+    display: none;
+    top: 19px;
+    left: 16px;
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    color: white;
+    cursor: pointer;
+    font-size: 30px;
+    line-height: 10px;
+    border: none;
+}
+
+.navBarfakeButton {
+    visibility: hidden;
+    user-select: none;
+}
+
+/* --------------- Smaller Navigation ---------------- */
+
+.smallDashboardNav {
+    display: none;
+    box-sizing: border-box;
+}
+
+.smallDashboardLinks {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.895);
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 500ms;
+    border-left: solid 1px #E6D8D7;
+}
+
+.smallDashboardLinks ul {
+    padding: 0px 20px;
+}
+
+.smallDashboardLinks li {
+    list-style: none;
+}
+
+.smallDashboardLinks a {
+    display: block;
+    padding: 8px 0px;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    transition: 500ms;
+    font-family: "Montserrat";
+}
+
+.smallNavHR {
+    border: solid .1px #373B4D;
+    border-radius: 5px;
+    width: 100%;
+    margin: 20px 0px;
 }
