--- a/CSS/dashboardMediaQuery.css
+++ b/CSS/dashboardMediaQuery.css
@@ -1,6 +1,27 @@
-@media screen and (max-width: 1025px) {}
+@media screen and (max-width: 1025px) {
+    .footerContent {
+        flex-direction: column;
+        grid-gap: 5px;
+        align-items: center;
+    }
+
+    /* -------------------- Footer -------------------- */
+
+    .footerContent {
+        flex-direction: column;
+    }
+
+    .footerLeft,
+    .footerRight {
+        padding: 5px;
+    }
+}
 
 @media screen and (max-width: 769px) {
+
+    /* ---------------------- Dashboard navigation ---------------------- */
+
+
     .dashboardNav {
         display: none;
     }
@@ -8,8 +29,65 @@
     .smallDashboardNav {
         display: flex;
     }
+
+    .dashboardNavigation {
+        display: none;
+    }
+
+    /* ---------------------- Overview Container ---------------------- */
+
+    .overViewContainer {
+        margin-left: 0;
+    }
+
+    /* ---------------------- Next trip ---------------------- */
+    .nextTripLayout {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+
+    .tripMeta {
+        flex-direction: column;
+        align-items: baseline;
+        grid-gap: 5px;
+    }
+
+
+    /* ---------------------- Footer ---------------------- */
+
+    .footerContent {
+        flex-direction: column;
+        padding: 15px 20px;
+        margin: 0px;
+    }
+
+    .footerLeft p {
+        margin: 8px 0;
+    }
+
+    .footerRight {
+        flex-direction: column;
+    }
+
+    .footerRight ul {
+        padding: 0;
+    }
+
+    .footerRight ul {
+        margin: 0;
+    }
+
 }
 
-@media screen and (max-width: 541px) {}
+
+@media screen and (max-width: 541px) {
+
+    /* -------------------- Footer -------------------- */
+    .footerRight ul li {
+        display: block;
+        padding: 0.6rem;
+    }
+}
 
 @media screen and (max-width: 426px) {}
