--- a/CSS/dashboardMediaQuery.css
+++ b/CSS/dashboardMediaQuery.css
@@ -53,6 +53,18 @@
         grid-gap: 5px;
     }
 
+    /* ---------------------- Points ---------------------- */
+
+    .pointsLayout {
+        display: grid;
+        grid-template-columns: 150px 1fr;
+    }
+
+    .bonusLevels {
+        display: grid;
+        grid-template-columns: 150px 1fr;
+        grid-gap: 50px;
+    }
 
     /* ---------------------- Footer ---------------------- */
 
@@ -82,6 +94,34 @@
 
 
 @media screen and (max-width: 541px) {
+
+    /* ----------------- Card size ------------------------ */
+
+    .card--points {
+        padding: 20px;
+    }
+
+    /* ---------------------- Next trip ---------------------- */
+    .nextTripLayout {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+
+    .tripMeta {
+        flex-direction: column;
+        align-items: baseline;
+        grid-gap: 5px;
+    }
+
+    /* ---------------------- Points ---------------------- */
+
+    .pointsLayout {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 100%;
+    }
 
     /* -------------------- Footer -------------------- */
     .footerRight ul li {
