--- a/CSS/dashboardMediaQuery.css
+++ b/CSS/dashboardMediaQuery.css
@@ -44,7 +44,8 @@
     .nextTripLayout {
         display: flex;
         justify-content: space-evenly;
-        align-items: flex-start;
+        align-items: center;
+
     }
 
     .tripMeta {
