--- a/CSS/dashboardMediaQuery.css
+++ b/CSS/dashboardMediaQuery.css
@@ -18,9 +18,7 @@
 }
 
 @media screen and (max-width: 769px) {
-
     /* ---------------------- Dashboard navigation ---------------------- */
-
 
     .dashboardNav {
         display: none;
@@ -45,13 +43,17 @@
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-
     }
 
     .tripMeta {
         flex-direction: column;
         align-items: baseline;
         grid-gap: 5px;
+    }
+
+    .driverPicture img {
+        height: 100px;
+        width: 100px;
     }
 
     /* ---------------------- Points ---------------------- */
@@ -95,12 +97,6 @@
 
 
 @media screen and (max-width: 541px) {
-
-    /* ----------------- Card size ------------------------ */
-
-    .card--points {
-        padding: 20px;
-    }
 
     /* ---------------------- Next trip ---------------------- */
     .nextTripLayout {
